--- a/src/app/components/lista-personajes/lista-personajes.component.html
+++ b/src/app/components/lista-personajes/lista-personajes.component.html
@@ -1,1 +1,29 @@
-<p>lista-personajes works!</p>
+<div class="container-fluid bg-light">
+  <div class="row ">
+    <div *ngFor="let personaje of personajes" class="col col-lg-4 col-md-6 col-sm-12  ">
+      <div class="row justify-content-center p-4">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src={{personaje.image}} alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">{{personaje.name}}</h5>
+            <p class="card-text">hola
+            </p>
+            <a class="btn btn-primary">Go
+              somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-light p-5">
+  <div class="row justify-content-center">
+    <button [routerLink]="['characterpage/',pagenumber]" routerLinkActive="active"
+      class="btn btn-outline-warning mr-5">Anterior</button>
+
+
+    <button class="btn btn-success ">Siguiente</button>
+
+  </div>
+</div>
