--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <a [routerLink]="['/login']" routerLinkActive="router-link-active" class="nav-link">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Mis Favoritos</a>
