--- a/src/app/components/lista-personajes/lista-personajes.component.html
+++ b/src/app/components/lista-personajes/lista-personajes.component.html
@@ -1,6 +1,26 @@
 <div class="container-fluid bg-light">
 
 
+  <div class="container-fluid bg-light pt-5 pb-5">
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="" placeholder="Tipo">Buscador</span>
+      </div>
+      <select class="custom-select" id="inputTipo" [(ngModel)]="selection">
+
+        <option value="name">Nombre</option>
+        <option value="status">Estatus</option>
+        <option value="specie">Especie</option>
+        <option value="type">Tipo</option>
+        <option value="gender">Genero</option>
+      </select>
+      <input type="text" class="form-control" placeholder="Nombre" [(ngModel)]="nombre">
+      <div class="input-group-prepend">
+        <button (click)="Busqueda()" class="btn btn-outline-secondary" type="button">Buscar</button>
+      </div>
+    </div>
+  </div>
+
 
   <div class="row ">
     <div *ngFor="let personaje of personajes" class="col col-lg-4 col-md-6 col-sm-12  ">
@@ -12,8 +32,7 @@
             <p class="card-text">hola
             </p>
             <a [routerLink]="['/character', personaje.id]" routerLinkActive="router-link-active"
-              class="btn btn-primary">Go
-              somewhere</a>
+              class="btn btn-primary">Detalles del personaje</a>
           </div>
         </div>
       </div>
