--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,15 @@
 <app-navbar></app-navbar>
 <div class="hero-image">
   <div class="containe">
-
-    <div class="row bg-light login">
-      <div class="col align-self-center ">
-        <h1>Rick and Morty API</h1>
+    <div class="col bg-light login rounded pt-4  ">
+      <div class="row align-self-center ">
+        <h1>Registro con Google</h1>
       </div>
-
+      <div class="row justify-content-center pt-1 ">
+        <button class="btn btn-success" (click)="loginWithGoogle()">
+          Login with google
+        </button>
+      </div>
     </div>
   </div>
 </div>
