--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,3 +1,7 @@
+h1 {
+  color: #333333;
+}
+
 .hero-image {
   display: flex;
   justify-content: center;
@@ -18,5 +22,5 @@
 }
 .containe {
   display: flex;
-  margin-top: 10em;
+  margin-top: 15em;
 }
