--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,5 +1,5 @@
 <div class="hero-image">
   <div class="hero-text">
-    <h1>Rick and Morty API</h1>
+    <h1>Personajes Rick and Morty </h1>
   </div>
 </div>
