--- a/src/app/pages/personaje-seleccionado/personaje-seleccionado.component.scss
+++ b/src/app/pages/personaje-seleccionado/personaje-seleccionado.component.scss
@@ -1,4 +1,24 @@
-.container {
-  padding: 5em;
+.containe {
+  margin-bottom: 10em;
 }
+
+.hero-image {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(https://images7.alphacoders.com/106/1062176.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero-text {
+  display: flex;
+  align-items: center;
+  font-size: 20em;
+  color: white;
+}
+
 //chamo no queria agarrar la propiedad en boostrap yo se que pt-#
